Some more examples

--- a/SimpleNMP/Control_theory/ODE.ipynb
+++ b/SimpleNMP/Control_theory/ODE.ipynb
@@ -27,33 +27,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# import the dependencies\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import math "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from scipy.integrate import odeint"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import math \n",
+    "\n",
+    "from scipy.integrate import odeint\n",
+    "\n",
+    "# Plotting\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n"
    ]
   },
   {
@@ -142,6 +129,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Multiple order equations\n",
+    "\n",
+    "Given the equations:\n",
+    "\n",
+    "$$\n",
+    "\\frac{dx}{dt} = -y \\\\\n",
+    "\\frac{dy}{dt} = x\n",
+    "$$\n",
+    "\n",
+    "With initial conditions\n",
+    "$$\n",
+    "x(0) = 1, y(0) = 1\n",
+    "$$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -168,7 +174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4
  },
