--- a/SimpleNMP/simple_tf/simple_nmp.ipynb
+++ b/SimpleNMP/simple_tf/simple_nmp.ipynb
@@ -261,6 +261,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "System: sys[4]\n",
+      "Inputs (1): u[0], \n",
+      "Outputs (1): y[0], \n",
+      "States (2): x[0], x[1], \n"
+     ]
+    }
+   ],
+   "source": [
+    "IO = control.tf2io(feedback)\n",
+    "print(IO)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 49,
    "metadata": {},
    "outputs": [
