--- a/Quadrotor_simulation/prototype.ipynb
+++ b/Quadrotor_simulation/prototype.ipynb
@@ -11,19 +11,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Importing the dependencies\n",
     "import gym\n",
     "import numpy as np\n",
-    "from gym import spaces"
+    "from gym import spaces\n",
+    "from scipy.integrate import solve_ivp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +103,7 @@
        "       -1.69678426])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,6 +117,93 @@
     "vec1 = A_linear@x\n",
     "\n",
     "vec1 + vec2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Check for integration methods"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# differential equation\n",
+    "def linear_model(t, x, u1, u2, u3, u4):\n",
+    "    \"\"\"\n",
+    "    Evaluate linear model using the state space form\n",
+    "    ẋ = Ax + Bu\n",
+    "    \"\"\"\n",
+    "    u = np.array([u1, u2, u3, u4])\n",
+    "    dxdt = A_linear@x + B_linear@u\n",
+    "    return dxdt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.34941563,  0.26284319, -0.05166599,  0.17525002,  0.52020521,\n",
+       "        0.34482389])"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check for work\n",
+    "timerange = (0.5, 0.502)\n",
+    "\n",
+    "# Specify the angles\n",
+    "p = 15*np.pi/180\n",
+    "r = -3*np.pi/180\n",
+    "y = 20*np.pi/180\n",
+    "pdot = 30*np.pi/180\n",
+    "rdot = 20*np.pi/180\n",
+    "ydot = 10*np.pi/180\n",
+    "\n",
+    "# Input voltages\n",
+    "u = tuple(np.array([5, 9, 10, 15]))\n",
+    "\n",
+    "# state vector\n",
+    "x = np.array([y, p, r, ydot, pdot, rdot])\n",
+    "\n",
+    "# get the solution\n",
+    "solution = solve_ivp(linear_model, timerange, x, args=u)\n",
+    "\n",
+    "# Next state\n",
+    "solution.y[:, -1]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "u1, u2, u3, u4 = np.array([5, 9, 10, 15])\n",
+    "u1"
    ]
   }
  ],
