Prototype angle ranges

--- a/Quadrotor_simulation/envs/prototype.ipynb
+++ b/Quadrotor_simulation/envs/prototype.ipynb
@@ -265,16 +265,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "98.10170355232758"
+       "numpy.float64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
     "\n",
     "reward = x.T@Q@x\n",
     "reward = reward + u.T@R@u\n",
-    "reward"
+    "type(reward)"
    ]
   },
   {
@@ -353,6 +353,102 @@
    "source": [
     "done = np.any(u <= np.array([2, 2, 2, 2])) or np.any(x[3:] >= max_arr[3:])\n",
     "done"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., 0., 0., 0.])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rest = np.zeros_like(x)\n",
+    "rest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.34906585,  0.26179939, -0.05235988,  0.17453293,  0.52359878,\n",
+       "        0.34906585])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for angle in x[:3]:\n",
+    "    if angle > np.pi:\n",
+    "        angle -= 2*np.pi\n",
+    "    if angle < -np.pi:\n",
+    "        angle += 2*np.pi\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.34906585,  0.26179939, -0.05235988])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x[:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.34906585,  0.26179939, -0.05235988,  0.17453293,  0.52359878,\n",
+       "        0.34906585])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x"
    ]
   }
  ],
