--- a/Quadrotor_simulation/envs/prototype.ipynb
+++ b/Quadrotor_simulation/envs/prototype.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,12 +19,13 @@
     "import gym\n",
     "import numpy as np\n",
     "from gym import spaces\n",
-    "from scipy.integrate import solve_ivp"
+    "from scipy.integrate import solve_ivp\n",
+    "import control"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +104,7 @@
        "       -1.69678426])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +134,7 @@
        "       [0.  , 0.  , 0.  , 0.01]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +156,7 @@
        "(6, 6)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +204,7 @@
        "        0.34482389])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +245,7 @@
        "5"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +275,7 @@
        "numpy.float64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +299,7 @@
        "array([False, False, False, False])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +320,7 @@
        "array([False, False, False])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +346,7 @@
        "False"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +367,7 @@
        "array([0., 0., 0., 0., 0., 0.])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +389,7 @@
        "        0.34906585])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +422,7 @@
        "array([ 0.34906585,  0.26179939, -0.05235988])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -442,13 +443,123 @@
        "        0.34906585])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Working with the LQR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Q = np.array([[500, 0, 0, 0, 0, 0], [0, 350, 0, 0, 0, 0], [0, 0, 350, 0, 0, 0],\\\n",
+    "                    [0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 20, 0], [0, 0, 0, 0, 0, 20]])\n",
+    "R = np.eye(4)*0.01"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.11803399e+02,  1.32287566e+02, -6.29181731e-13,\n",
+       "        -4.14127553e+01,  3.62195357e+01, -3.26081873e-15],\n",
+       "       [-1.11803399e+02, -1.32287566e+02,  6.29181731e-13,\n",
+       "        -4.14127553e+01, -3.62195357e+01,  3.26081873e-15],\n",
+       "       [ 1.11803399e+02, -1.39487408e-13,  1.32287566e+02,\n",
+       "         4.14127553e+01, -3.26081873e-15,  3.62195357e+01],\n",
+       "       [ 1.11803399e+02,  1.39487408e-13, -1.32287566e+02,\n",
+       "         4.14127553e+01,  3.26081873e-15, -3.62195357e+01]])"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get the feedback law\n",
+    "K, S, _ = control.lqr(A_linear, B_linear, Q, R)\n",
+    "K"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  7.34267042, -99.85194606,  51.97108013,  40.53819551])"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check feedback law\n",
+    "action = np.dot(K, x)\n",
+    "action"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  7.34267042, -99.85194606,  51.97108013,  40.53819551])"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "action_2 = K@x\n",
+    "action_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "K.shape[1] == x.shape[0]"
    ]
   }
  ],
