--- a/Quadrotor_simulation/prototype.ipynb
+++ b/Quadrotor_simulation/prototype.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,12 +20,12 @@
     "import numpy as np\n",
     "from gym import spaces\n",
     "from scipy.integrate import solve_ivp\n",
-    "import control"
+    "import control.matlab"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
        "       -1.69678426])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
        "       [0.  , 0.  , 0.  , 0.01]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
        "(6, 6)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
        "        0.34482389])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
        "5"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
        "numpy.float64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
        "array([False, False, False, False])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
        "array([False, False, False])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
        "False"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +367,7 @@
        "array([0., 0., 0., 0., 0., 0.])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
        "        0.34906585])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
        "array([ 0.34906585,  0.26179939, -0.05235988])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
        "        0.34906585])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,45 +472,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-1.11803399e+02,  1.32287566e+02, -6.29181731e-13,\n",
-       "        -4.14127553e+01,  3.62195357e+01, -3.26081873e-15],\n",
-       "       [-1.11803399e+02, -1.32287566e+02,  6.29181731e-13,\n",
-       "        -4.14127553e+01, -3.62195357e+01,  3.26081873e-15],\n",
-       "       [ 1.11803399e+02, -1.39487408e-13,  1.32287566e+02,\n",
-       "         4.14127553e+01, -3.26081873e-15,  3.62195357e+01],\n",
-       "       [ 1.11803399e+02,  1.39487408e-13, -1.32287566e+02,\n",
-       "         4.14127553e+01,  3.26081873e-15, -3.62195357e+01]])"
+       "matrix([[-1.11803399e+02,  1.32287566e+02, -6.29181731e-13,\n",
+       "         -4.14127553e+01,  3.62195357e+01, -3.26081873e-15],\n",
+       "        [-1.11803399e+02, -1.32287566e+02,  6.29181731e-13,\n",
+       "         -4.14127553e+01, -3.62195357e+01,  3.26081873e-15],\n",
+       "        [ 1.11803399e+02, -1.39487408e-13,  1.32287566e+02,\n",
+       "          4.14127553e+01, -3.26081873e-15,  3.62195357e+01],\n",
+       "        [ 1.11803399e+02,  1.39487408e-13, -1.32287566e+02,\n",
+       "          4.14127553e+01,  3.26081873e-15, -3.62195357e+01]])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Get the feedback law\n",
-    "K, S, _ = control.lqr(A_linear, B_linear, Q, R)\n",
+    "K, S, _ = control.matlab.lqr(A_linear, B_linear, Q, R)\n",
     "K"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([  7.34267042, -99.85194606,  51.97108013,  40.53819551])"
+       "matrix([[-1.11803399e+02,  1.32287566e+02, -6.29181731e-13,\n",
+       "         -4.14127553e+01,  3.62195357e+01, -3.26081873e-15],\n",
+       "        [-1.11803399e+02, -1.32287566e+02,  6.29181731e-13,\n",
+       "         -4.14127553e+01, -3.62195357e+01,  3.26081873e-15],\n",
+       "        [ 1.11803399e+02, -1.39487408e-13,  1.32287566e+02,\n",
+       "          4.14127553e+01, -3.26081873e-15,  3.62195357e+01],\n",
+       "        [ 1.11803399e+02,  1.39487408e-13, -1.32287566e+02,\n",
+       "          4.14127553e+01,  3.26081873e-15, -3.62195357e+01]])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import control\n",
+    "K1, S1, _ = control.lqr(A_linear, B_linear, Q, R)\n",
+    "K1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.all(K == K1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "matrix([[  7.34267042, -99.85194606,  51.97108013,  40.53819551]])"
+      ]
+     },
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,16 +572,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([  7.34267042, -99.85194606,  51.97108013,  40.53819551])"
+       "matrix([[  7.34267042, -99.85194606,  51.97108013,  40.53819551]])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +593,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 4)"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +620,7 @@
        "True"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +662,7 @@
        "        0.95583541])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
