changing seed for the hover environment

--- a/Quadrotor_simulation/prototype.ipynb
+++ b/Quadrotor_simulation/prototype.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
        "       -1.69678426])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
        "       [0.  , 0.  , 0.  , 0.01]])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
        "(6, 6)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
        "        0.34482389])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "state = np.array([ 0.88768525,  0.60692152, -4.8618012,   0.9140963,   0.66019708, -9.31921407])\n",
+    "state[2] < -np.pi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.88768525,  0.60692152,  1.42138411,  0.9140963 ,  0.66019708,\n",
+       "       -9.31921407])"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for i, ele in enumerate(state[:3]):\n",
+    "    if  ele< -np.pi:\n",
+    "        state[i] += 2*np.pi\n",
+    "state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0471975511965976"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "60*np.pi/180"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +310,7 @@
        "5"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +340,7 @@
        "numpy.float64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +364,7 @@
        "array([False, False, False, False])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +385,7 @@
        "array([False, False, False])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +411,7 @@
        "False"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +432,7 @@
        "array([0., 0., 0., 0., 0., 0.])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +454,7 @@
        "        0.34906585])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +487,7 @@
        "array([ 0.34906585,  0.26179939, -0.05235988])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +508,7 @@
        "        0.34906585])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +553,7 @@
        "          4.14127553e+01,  3.26081873e-15, -3.62195357e+01]])"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +582,7 @@
        "          4.14127553e+01,  3.26081873e-15, -3.62195357e+01]])"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,27 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.all(K == K1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -559,29 +604,7 @@
        "matrix([[  7.34267042, -99.85194606,  51.97108013,  40.53819551]])"
       ]
      },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# check feedback law\n",
-    "action = np.dot(K, x)\n",
-    "action"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "matrix([[  7.34267042, -99.85194606,  51.97108013,  40.53819551]])"
-      ]
-     },
-     "execution_count": 46,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -593,25 +616,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1, 4)"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +632,7 @@
        "True"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -652,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +674,7 @@
        "        0.95583541])"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
