Redirect the feedback law, and add testing notebook

--- a/Quadrotor_simulation/prototype.ipynb
+++ b/Quadrotor_simulation/prototype.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
        "       -1.69678426])"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
        "       [0.  , 0.  , 0.  , 0.01]])"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
        "(6, 6)"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
        "        0.34482389])"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
        "True"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
        "       -9.31921407])"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
        "1.0471975511965976"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
        "5"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
        "numpy.float64"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
        "array([False, False, False, False])"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +385,7 @@
        "array([False, False, False])"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
        "False"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
        "array([0., 0., 0., 0., 0., 0.])"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +454,7 @@
        "        0.34906585])"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
        "array([ 0.34906585,  0.26179939, -0.05235988])"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
        "        0.34906585])"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -553,36 +553,7 @@
        "          4.14127553e+01,  3.26081873e-15, -3.62195357e+01]])"
       ]
      },
-     "execution_count": 88,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Get the feedback law\n",
-    "K, S, _ = control.matlab.lqr(A_linear, B_linear, Q, R)\n",
-    "K"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "matrix([[-1.11803399e+02,  1.32287566e+02, -6.29181731e-13,\n",
-       "         -4.14127553e+01,  3.62195357e+01, -3.26081873e-15],\n",
-       "        [-1.11803399e+02, -1.32287566e+02,  6.29181731e-13,\n",
-       "         -4.14127553e+01, -3.62195357e+01,  3.26081873e-15],\n",
-       "        [ 1.11803399e+02, -1.39487408e-13,  1.32287566e+02,\n",
-       "          4.14127553e+01, -3.26081873e-15,  3.62195357e+01],\n",
-       "        [ 1.11803399e+02,  1.39487408e-13, -1.32287566e+02,\n",
-       "          4.14127553e+01,  3.26081873e-15, -3.62195357e+01]])"
-      ]
-     },
-     "execution_count": 89,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,50 +566,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "matrix([[  7.34267042, -99.85194606,  51.97108013,  40.53819551]])"
+       "numpy.matrix"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "action_2 = K@x\n",
-    "action_2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 91,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "K.shape[1] == x.shape[0]"
+    "action_2 = K1@x\n",
+    "type(action_2)"
    ]
   },
   {
@@ -650,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -674,13 +618,34 @@
        "        0.95583541])"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "reference_state"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## For plotting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import sys\n",
+    "\n",
+    "sys.path.insert(0, 'D:\\IITH_AI_Docs\\Thesis\\Thesis-work\\Thesis\\Quadrotor_simulation')\n",
+    "from envs.hover_linear import hover_linear\n",
+    "from controllers.lqr import LQR"
    ]
   }
  ],
